PoC for HTTP2 support